todo:
utf8
warnings
check that partition supports it, especially in unit test
docs, explain user_xattr, mount -o remount
handle filehandle as well - may need to be done in perl rather than xs
change to use section 2 calls instead of section 3
for "operation not supported" note must be prefixed with "user"
buffer size, reuse buffer?
throw exceptions rather than warnings on getxattr() failure
symbolic link handling
Check it can be used with Perl 5.6.x


Revision history for Perl extension File::ExtAttr.

0.03 2005-12-09
    - (richdawe) Rename to File::ExtAttr from Linux::xattr
    - (richdawe) Bugfix: XATTR_* were not found correctly in XS.

0.02 2005-11-15
    - (kg) changing to use system functions instead of compatability functions
    - (kg) fixing strlen stuff in get and set
    - (kg) exporting constants

0.01  Wed Nov  9 08:57:42 2005
	- original version; created by h2xs 1.23 with options
		-O -n Linux::xattr Linux-xattr/mylib/xattrlib.h
